--- a/index.html
+++ b/index.html
@@ -6,12 +6,17 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Ryan Wolf</title>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/css/bootstrap.min.css" integrity="sha384-GJzZqFGwb1QTTN6wy59ffF1BuGJpLSa9DkKMp0DgiMDm4iYMj70gZWKYbI706tWS" crossorigin="anonymous">
-    <link rel="stylesheet" href="css/main.css">
+    <link href="https://fonts.googleapis.com/css?family=Coiny|Raleway|ZCOOL+QingKe+HuangYou" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Archivo" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Libre+Franklin" rel="stylesheet">
+    <link rel="stylesheet" type="text/css" href="css/animate.min.css">
+    <link rel="stylesheet" type="text/css" href="css/main.css">
 </head>
 <body>
    
-    <nav class="navbar navbar-expand-lg navbar-light bg-light">
-        <a class="navbar-brand" href="#">Ryan Wolf</a>
+    <nav class="navbar navbar-expand-lg navbar-light" style="background-color: #387780; margin: 10px; border-radius: 5px;">
+        <a class="navbar-brand" href="https://www.linkedin.com/in/ryan-wolf-94300615/
+        ">Ryan Wolf</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
@@ -21,28 +26,164 @@
               <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#">Features</a>
+              <a class="nav-link" href="#about">About</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#">Pricing</a>
+              <a class="nav-link" href="#projects">Projects</a>
+            </li>
+            <!-- <li class="nav-item">
+              <a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true">Disabled</a> -->
             </li>
             <li class="nav-item">
-              <a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true">Disabled</a>
+                <a class="nav-link" href="https://www.linkedin.com/in/ryan-wolf-94300615/
+                ">LinkedIn</a>
             </li>
             <li class="nav-item">
-                <a class="nav-link" href="#">Merchandise</a>
+                <a class="nav-link" href="#contact">Contact</a>
             </li>
           </ul>
         </div>
       </nav>
     
-      <div class="jumbotron">
-        <h1 class="display-4">Hello, world!</h1>
-        <p class="lead">This is a simple hero unit, a simple jumbotron-style component for calling extra attention to featured content or information.</p>
+      <div class="jumbotron" style="margin: 10px">
+        <h1 class="display-4">Business Professionalism</h1>
+        <p class="lead">Specialized Knowledge.  Competency.  Honesty and Integrity.  Accountability.  Self-Regulation.  Emotional Intelligence.  Looking the Part.</p>
         <hr class="my-4">
-        <p>It uses utility classes for typography and spacing to space content out within the larger container.</p>
-        <a class="btn btn-primary btn-lg" href="#" role="button">Learn more</a>
+        <p>Often lacking but highly valued in today's workforce, learn how I can showcase my professionalism in your organization.</p>
+        <a class="btn btn-outline-secondary btn-lg" href="assets/tips.pdf" role="button">Learn More</a>
       </div>
+
+      <br>
+      <br>
+      <br>
+
+      <!-- About Section -->
+      <section id="about">
+        <a>
+          <h2 class="text-center">About Me</h2>
+            <p>I'm an experienced leader in business analysis and process improvement.  I've led management teams in successful short-term and long-term goals for continuous business development.  I've implemented improvement processes within a multi company ecosystem leading to increased employee retention and higher customer satisfaction.</p>
+            <p>Currently enrolled at Eleven-Fifty Academy in the accelerated JavaScript program, I plan on applying my business understanding to help others achieve their goals in a technical realm.</p>
+        </a>
+      </section>
+
+      <br>
+      <br>
+      <br>
+      <hr>
+      <br>
+      <br>
+
+      <!-- Porfolio Section -->
+      <section id="projects">
+      <h2 class="text-center">My Projects</h2>
+      <div class="row" style="padding: 20px">
+        <div class="col-sm-4">
+          <div class="card">
+            <img src="assets/frank.jpg" class="card-img-top" alt="...">
+            <div class="card-body">
+              <h5 class="card-title">CSS Creature</h5>
+              <p class="card-text">Here we got our first exposure to Cascading Style Sheets, being required to create a "CSS Creature" on our second day of class.</p>
+              <a href="https://codepen.io/RyanWolf/full/JwZdPL" class="btn btn-outline-secondary">See on CodePen >></a>
+            </div>
+          </div>
+        </div>
+        <div class="col-sm-4">
+          <div class="card">
+            <img src="assets/tutorial.jpg" class="card-img-top" alt="...">
+            <div class="card-body">
+              <br>
+              <br>
+              <br>
+              <h5 class="card-title">Tutorial tutorialWebpage</h5>
+              <p class="card-text">Day 6 we had to showcase our ability to put a webpage together. We used a variety of components including navs, links, CSS psuedo-classes, and animations.</p>
+              <a href="https://ryanaverywolf.github.io/tutorialWebpage/" class="btn btn-outline-secondary">See the Full Page >></a>
+                </div>
+              </div>
+            </div>
+            <div class="col-sm-4">
+                <div class="card">
+                    <img src="..." class="card-img-top" alt="...">
+                  <div class="card-body">
+                    <h5 class="card-title">API Project</h5>
+                    <p class="card-text">By day 14, we were required to have built a page connecting to an outside API, allowing a user to see snippets of data based on the function we designed.</p>
+                    <a href="#" class="btn btn-outline-secondary">See my API >></a>
+                  </div>
+                </div>
+              </div>
+          </div>
+        </section>
+        <br>
+        <br>
+        <br>
+      
+        <!-- Contact Section -->
+        <section id="contact">
+            <div class="container">
+                <h2 class="text-center text-uppercase">Let's Meet to Discuss What I Can Offer</h2>
+                <div class="row">
+                  <form action="https://formspree.io/ryanaverywolf@gmail.com" method="POST">
+                    <div class="control-group">
+                      <div class="form-group">
+                        <label>Name</label>
+                        <input
+                          type="text"
+                          class="form-control"
+                          placeholder="Your Name"
+                          id="name"
+                          required
+                          data-validation-required-message="Please enter your name"
+                          name="name"
+                          >
+                        <p class="help-block text-danger"></p>
+                      </div>
+                    </div>
+                    <div class="control-group">
+                      <div class="form-group">
+                        <label>Email Address</label>
+                        <input
+                          type="email"
+                          class="form-control"
+                          placeholder="Your Email"
+                          id="email"
+                          required
+                          data-validation-required-message="Please enter your email"
+                          name="_replyto"
+                        >
+                        <p class="help-block text-danger"></p>
+                      </div>
+                    </div>
+                    <div class="control-group">
+                      <div class="form-group">
+                        <textarea
+                          class="form-control"
+                          rows="7"
+                          placeholder="Your Message"
+                          id="message"
+                          required
+                          data-validation-required-message="Please leave a message"
+                          name="message"
+                        ></textarea>
+                        <p class="help-block text-danger"></p>
+                      </div>
+                    </div>
+                    <div class="text-center">
+                      <div id="success"></div>
+                      <button type="submit" class="btn btn-lg btn-black">
+                        <i class="fa fa-paper-plane-o" aria-hidden="true"></i>
+                        Send Message
+                      </button>
+                    </div>
+                  </form>
+                </div>
+              </div>
+        </section>
+
+        <footer style="color: #d2cca1; background-color: #387780;margin: 10px; padding: 10px; border-radius: 5px;"> 
+            <p>Copyright © 2019 Ryan A. Wolf</p>
+            <p><a>Eleven-Fifty Academic Program</a> -
+            <a>Cohort 22</a> -
+            <a>2019</a></p>
+      </footer>
 
 
 <!--JavaScript Tags-->
