--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
         <p class="lead">Specialized Knowledge.  Competency.  Honesty and Integrity.  Accountability.  Self-Regulation.  Emotional Intelligence.  Looking the Part.</p>
         <hr class="my-4">
         <p>Often lacking but highly valued in today's workforce, learn how I can showcase my professionalism in your organization.</p>
-        <a class="btn btn-outline-secondary btn-lg" href="assets/tips.pdf" role="button">Learn More</a>
+        <a class="btn btn-outline-secondary btn-lg" href="assets/resume19023.pdf" role="button">My Resum&eacute</a>
       </div>
 
       <br>
