--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
         <p class="lead">Specialized Knowledge.  Competency.  Honesty and Integrity.  Accountability.  Self-Regulation.  Emotional Intelligence.  Looking the Part.</p>
         <hr class="my-4">
         <p>Often lacking but highly valued in today's workforce, learn how I can showcase my professionalism in your organization.</p>
-        <a class="btn btn-outline-secondary btn-lg" href="assets/resume19023.pdf" role="button">My Resum&eacute</a>
+        <a class="btn btn-outline-secondary btn-lg" href="assets/resume19023.pdf" target="blank" role="button">My Resum&eacute</a>
       </div>
 
       <br>
@@ -83,7 +83,7 @@
             <div class="card-body">
               <h5 class="card-title">CSS Creature</h5>
               <p class="card-text">Here we got our first exposure to Cascading Style Sheets, being required to create a "CSS Creature" on our second day of class.</p>
-              <a href="https://codepen.io/RyanWolf/full/JwZdPL" class="btn btn-outline-secondary">See on CodePen >></a>
+              <a href="https://codepen.io/RyanWolf/full/JwZdPL" target="blank" class="btn btn-outline-secondary">See on CodePen >></a>
             </div>
           </div>
         </div>
@@ -96,17 +96,21 @@
               <br>
               <h5 class="card-title">Tutorial tutorialWebpage</h5>
               <p class="card-text">Day 6 we had to showcase our ability to put a webpage together. We used a variety of components including navs, links, CSS psuedo-classes, and animations.</p>
-              <a href="https://ryanaverywolf.github.io/tutorialWebpage/" class="btn btn-outline-secondary">See the Full Page >></a>
+              <a href="https://ryanaverywolf.github.io/tutorialWebpage/" target="blank" class="btn btn-outline-secondary">See the Full Page >></a>
                 </div>
               </div>
             </div>
             <div class="col-sm-4">
                 <div class="card">
-                    <img src="..." class="card-img-top" alt="...">
+                    <img src="assets/ghibli.jpg" class="card-img-top" alt="...">
                   <div class="card-body">
+                    <br>
+                    <br>
+                    <br>
+                    <br>
                     <h5 class="card-title">API Project</h5>
                     <p class="card-text">By day 14, we were required to have built a page connecting to an outside API, allowing a user to see snippets of data based on the function we designed.</p>
-                    <a href="#" class="btn btn-outline-secondary">See my API >></a>
+                    <a href="https://ryan-api-project-4c6bf.firebaseapp.com/" target="blank" class="btn btn-outline-secondary">See my API >></a>
                   </div>
                 </div>
               </div>
