--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 <body>
    
     <nav class="navbar navbar-expand-lg navbar-light" style="background-color: #387780; margin: 10px; border-radius: 5px;">
-        <a class="navbar-brand" href="https://www.linkedin.com/in/ryan-wolf-94300615/
+        <a class="navbar-brand" target="blank" href="https://www.linkedin.com/in/ryan-wolf-94300615/
         ">Ryan Wolf</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
@@ -35,7 +35,7 @@
               <a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true">Disabled</a> -->
             </li>
             <li class="nav-item">
-                <a class="nav-link" href="https://www.linkedin.com/in/ryan-wolf-94300615/
+                <a class="nav-link" target="blank" href="https://www.linkedin.com/in/ryan-wolf-94300615/
                 ">LinkedIn</a>
             </li>
             <li class="nav-item">
@@ -75,7 +75,7 @@
 
       <!-- Porfolio Section -->
       <section id="projects">
-      <h2 class="text-center">My Projects</h2>
+      <h2 class="text-center">My Course Projects</h2>
       <div class="row" style="padding: 20px">
         <div class="col-sm-4">
           <div class="card">
