--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
               <a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true">Disabled</a> -->
             </li>
             <li class="nav-item">
-                <a class="nav-link" target="blank" href="https://www.linkedin.com/in/ryan-wolf-94300615/
+                <a class="nav-link" target="blank" href="https://www.linkedin.com/in/ryanaverywolf/
                 ">LinkedIn</a>
             </li>
             <li class="nav-item">
@@ -49,8 +49,8 @@
         <h1 class="display-4">Business Professionalism</h1>
         <p class="lead">Specialized Knowledge.  Competency.  Honesty and Integrity.  Accountability.  Self-Regulation.  Emotional Intelligence.  Looking the Part.</p>
         <hr class="my-4">
-        <p>Often lacking but highly valued in today's workforce, learn how I can showcase my professionalism in your organization.</p>
-        <a class="btn btn-outline-secondary btn-lg" href="assets/resume19023.pdf" target="blank" role="button">My Resum&eacute</a>
+        <p>Highly valued in today's workforce, learn how I can showcase my professionalism in your organization.</p>
+        <a class="btn btn-outline-secondary btn-lg" href="assets/resume19112.pdf" target="blank" role="button">My Resum&eacute</a>
       </div>
 
       <br>
@@ -62,7 +62,7 @@
         <a>
           <h2 class="text-center">About Me</h2>
             <p>I'm an experienced leader in business analysis and process improvement.  I've led management teams in successful short-term and long-term goals for continuous business development.  I've implemented improvement processes within a multi company ecosystem leading to increased employee retention and higher customer satisfaction.</p>
-            <p>Currently enrolled at Eleven-Fifty Academy in the accelerated JavaScript program, I plan on applying my business understanding to help others achieve their goals in a technical realm.</p>
+            <p>A recent graduate of Eleven-Fifty Academy in the accelerated JavaScript program, I plan on applying my business understanding to help others achieve their goals in a technical realm.</p>
         </a>
       </section>
 
@@ -82,7 +82,7 @@
             <img src="assets/frank.jpg" class="card-img-top" alt="...">
             <div class="card-body">
               <h5 class="card-title">CSS Creature</h5>
-              <p class="card-text">Here we got our first exposure to Cascading Style Sheets, being required to create a "CSS Creature" on our second day of class.</p>
+              <p class="card-text">Here was our first exposure to Cascading Style Sheets, being required to create a "CSS Creature" on our second day of class.</p>
               <a href="https://codepen.io/RyanWolf/full/JwZdPL" target="blank" class="btn btn-outline-secondary">See on CodePen >></a>
             </div>
           </div>
@@ -94,7 +94,7 @@
               <br>
               <br>
               <br>
-              <h5 class="card-title">Tutorial tutorialWebpage</h5>
+              <h5 class="card-title">Tutorial Webpage</h5>
               <p class="card-text">Day 6 we had to showcase our ability to put a webpage together. We used a variety of components including navs, links, CSS psuedo-classes, and animations.</p>
               <a href="https://ryanaverywolf.github.io/tutorialWebpage/" target="blank" class="btn btn-outline-secondary">See the Full Page >></a>
                 </div>
@@ -187,7 +187,7 @@
             <p><a>Eleven-Fifty Academic Program</a> -
             <a>Cohort 22</a> -
             <a>2019</a></p>
-      </footer>
+        </footer>
 
 
 <!--JavaScript Tags-->
