--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
               <br>
               <br>
               <h5 class="card-title">Tutorial Webpage</h5>
-              <p class="card-text">Day 6 we had to showcase our ability to put a webpage together. We used a variety of components including navs, links, CSS psuedo-classes, and animations.</p>
+              <p class="card-text">Day six we had to showcase our ability to put a webpage together. We used a variety of components including navs, links, CSS psuedo-classes, and animations.</p>
               <a href="https://ryanaverywolf.github.io/tutorialWebpage/" target="blank" class="btn btn-outline-secondary">See the Full Page >></a>
                 </div>
               </div>
@@ -109,7 +109,7 @@
                     <br>
                     <br>
                     <h5 class="card-title">API Project</h5>
-                    <p class="card-text">By day 14, we were required to have built a page connecting to an outside API, allowing a user to see snippets of data based on the function we designed.</p>
+                    <p class="card-text">By day fourteen, we were required to have built a page connecting to an outside API, allowing a user to see snippets of data based on the function we designed.</p>
                     <a href="https://ryan-api-project-4c6bf.firebaseapp.com/" target="blank" class="btn btn-outline-secondary">See my API >></a>
                   </div>
                 </div>
